--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "server": "node server/index.cjs",
+    "start": "node server/index.cjs",   
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,7 +16,7 @@
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "googleapis": "^154.0.0",
     "lucide-react": "^0.344.0",
     "node-cron": "^4.2.1",
